Put "flex-wrap: wrap" on the correct flex class

--- a/nlmapsweb/static/css/base.css
+++ b/nlmapsweb/static/css/base.css
@@ -249,7 +249,10 @@ input[type="checkbox"] {
     max-width: 1em;
 }
 
+.page-nav {
+    flex-wrap: wrap;
+}
+
 .page-nav * {
     margin: 0em 1em;
-    flex-wrap: wrap;
 }
